Fix pages being too wide on desktop
Note that there is a semi-issue now of the giscus widget on the homepage being wider.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,7 +22,8 @@
   padding-left: 1rem;
   padding-right: 1rem;
   min-width: 0;
-  max-width: 100%;
+  width: 100%;
+  max-width: 48.75rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -35,9 +36,5 @@
 .switcher img {
 	height:100%;
 	margin-top: 0;
-}
-
-.katex-block {
-	overflow-x: scroll;
 }
 
